# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
include/toy/: CMakeLists.txt
mlir-toy/: CMakeLists.txt
my-first-frontend/: pom.xml
my-first-frontend/src/main/antlr4/abhishek/josyula/: Expr.g4
my-first-frontend/src/main/java/abhishek/josyula/: App.java
my-first-frontend/src/main/java/abhishek/josyula/app/: App.java
my-first-frontend/src/test/java/abhishek/josyula/: AppTest.java
my-first-frontend/src/test/java/abhishek/josyula/app/: AppTest.java
risc-v-emulator/: .gitignore
